--- a/index.html
+++ b/index.html
@@ -74,61 +74,94 @@
       </div>
       <!-- Pre-Loader end -->
       <!-- Style switcher start -->
-      <!-- <div class="style-switch-wrapper">
-		<div class="style-switch-button">
-			<i class="fa fa-cog" aria-hidden="true"></i>
-		</div>
-		<h4>Unlimited Colors</h4>
-    <ul class="">
-      <li id="preset1" class=""><img
-        src="assets/images/colors/orange.png" alt="orange" /></li>
-      <li id="preset2" class=""><img
-        src="assets/images/colors/purple.png" alt="purple" /></li>
-      <li id="preset3" class=""><img
-        src="assets/images/colors/red.png" alt="red" /></li>
-      <li id="preset4" class=""><img
-        src="assets/images/colors/violet.png" alt="violet" /></li>
-      <li id="preset5" class=""><img
-        src="assets/images/colors/blue.png" alt="blue" /></li>
-      <li id="preset6" class=""><img
-        src="assets/images/colors/golden.png" alt="golden" /></li>
-      <li id="preset7" class=""><img
-        src="assets/images/colors/magenta.png" alt="magenta" /></li>
-      <li id="preset8" class=""><img
-        src="assets/images/colors/yellowgreen.png" alt="yellowgreen" /></li>
-      <li id="preset9" class=""><img
-        src="assets/images/colors/green.png" alt="green" /></li>
-      <li id="preset10" class=""><img
-        src="assets/images/colors/yellow.png" alt="yellow" /></li>
-    </ul>
-    <h4>Light Mode</h4>
+      <div class="style-switch-wrapper">
+        <div class="style-switch-button">
+          <i class="fa fa-cog" aria-hidden="true"></i>
+        </div>
+        <h4>Unlimited Colors</h4>
+        <ul class="">
+          <li id="preset1" class="">
+            <img src="assets/images/colors/orange.png" alt="orange" />
+          </li>
+          <li id="preset2" class="">
+            <img src="assets/images/colors/purple.png" alt="purple" />
+          </li>
+          <li id="preset3" class="">
+            <img src="assets/images/colors/red.png" alt="red" />
+          </li>
+          <li id="preset4" class="">
+            <img src="assets/images/colors/violet.png" alt="violet" />
+          </li>
+          <li id="preset5" class="">
+            <img src="assets/images/colors/blue.png" alt="blue" />
+          </li>
+          <li id="preset6" class="">
+            <img src="assets/images/colors/golden.png" alt="golden" />
+          </li>
+          <li id="preset7" class="">
+            <img src="assets/images/colors/magenta.png" alt="magenta" />
+          </li>
+          <li id="preset8" class="">
+            <img src="assets/images/colors/yellowgreen.png" alt="yellowgreen" />
+          </li>
+          <li id="preset9" class="">
+            <img src="assets/images/colors/green.png" alt="green" />
+          </li>
+          <li id="preset10" class="">
+            <img src="assets/images/colors/yellow.png" alt="yellow" />
+          </li>
+        </ul>
+        <h4>Light Mode</h4>
         <div class="switch" id="switcherrr">
-          <a href="https://avstechnolabs.com/Themeforest/Gaspar/01/Light/index.html"><i class="fas fa-sun open"></i></a>
+          <a
+            href="https://avstechnolabs.com/Themeforest/Gaspar/01/Light/index.html"
+            ><i class="fas fa-sun open"></i
+          ></a>
         </div>
         <h4 class="title">Magic Cursor</h4>
         <ul class="cursor">
           <li><a class="showme show" href="#"></a></li>
-          <li><a class="hide" href="#"><svg xmlns="http://www.w3.org/2000/svg" class="svg" id="Capa_1"
-                enable-background="new 0 0 512 512" height="512" viewBox="0 0 512 512" width="512"
-                class="svg replaced-svg">
+          <li>
+            <a class="hide" href="#"
+              ><svg
+                xmlns="http://www.w3.org/2000/svg"
+                class="svg"
+                id="Capa_1"
+                enable-background="new 0 0 512 512"
+                height="512"
+                viewBox="0 0 512 512"
+                width="512"
+                class="svg replaced-svg"
+              >
                 <g>
-                  <path d="m451.002 183.574h29.997v84.853h-29.997z"
-                    transform="matrix(.707 -.707 .707 .707 -23.318 395.706)"></path>
-                  <path d="m271.002 3.574h29.997v84.853h-29.997z"
-                    transform="matrix(.707 -.707 .707 .707 51.241 215.706)"></path>
-                  <path d="m423.574 31.002h84.853v29.997h-84.853z"
-                    transform="matrix(.707 -.707 .707 .707 103.961 342.985)"></path>
                   <path
-                    d="m42.422 512 150.458-150.458 42.114 125.464 152.988-362.988-362.988 152.988 125.464 42.114-150.458 150.458z">
-                  </path>
+                    d="m451.002 183.574h29.997v84.853h-29.997z"
+                    transform="matrix(.707 -.707 .707 .707 -23.318 395.706)"
+                  ></path>
+                  <path
+                    d="m271.002 3.574h29.997v84.853h-29.997z"
+                    transform="matrix(.707 -.707 .707 .707 51.241 215.706)"
+                  ></path>
+                  <path
+                    d="m423.574 31.002h84.853v29.997h-84.853z"
+                    transform="matrix(.707 -.707 .707 .707 103.961 342.985)"
+                  ></path>
+                  <path
+                    d="m42.422 512 150.458-150.458 42.114 125.464 152.988-362.988-362.988 152.988 125.464 42.114-150.458 150.458z"
+                  ></path>
                   <path d="m361 0h30v61h-30z"></path>
                   <path d="m451 121h61v30h-61z"></path>
-                </g>
-              </svg></a></li>
+                </g></svg
+            ></a>
+          </li>
         </ul>
-        <a target="_blank" href="https://themeforest.net/item/gaspar-personal-portfolio-html-template/36192601"
-          class="purchse-btn"><i class="fa fa-shopping-cart"></i> Purchase</a>
-	</div> -->
+        <a
+          target="_blank"
+          href="https://themeforest.net/item/gaspar-personal-portfolio-html-template/36192601"
+          class="purchse-btn"
+          ><i class="fa fa-shopping-cart"></i> Purchase</a
+        >
+      </div>
       <!-- Header-section Start-->
       <div
         class="header-holder services-section text-center animate__animated animate__zoomIn"
