--- a/portfolio-details.html
+++ b/portfolio-details.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
   
-<!-- Mirrored from avstechnolabs.com/Themeforest/Gaspar/02/Dark/blog-page.html by HTTrack Website Copier/3.x [XR&CO'2014], Mon, 14 Mar 2022 11:38:28 GMT -->
+<!-- Mirrored from avstechnolabs.com/Themeforest/Gaspar/02/Dark/portfolio-details.html by HTTrack Website Copier/3.x [XR&CO'2014], Mon, 14 Mar 2022 11:38:26 GMT -->
 <head>
     <!-- Title of The Page -->
     <title>Gaspar | Personal Portfolio HTML Template</title>
@@ -46,8 +46,8 @@
       <div class="loader_line"></div>
     </div>
     <!-- Pre-Loader end -->
-     <!-- Style switcher start -->
-	<div class="style-switch-wrapper">
+   <!-- Style switcher start -->
+   <div class="style-switch-wrapper">
 		<div class="style-switch-button">
 			<i class="fa fa-cog" aria-hidden="true"></i>
 		</div>
@@ -114,8 +114,8 @@
         <li><a class="nav-link scrollto" href="index-2.html#hero"><i class="fas fa-house-user"></i>Home</a></li>
         <li><a class="nav-link scrollto" href="index-2.html#about"><i class="fas fa-user-alt"></i>About</a></li>
         <li><a class="nav-link scrollto" href="index-2.html#services"><i class="fas fa-poll"></i>Services</a></li>
-        <li><a class="nav-link scrollto" href="index-2.html#portfolio"> <i class="fas fa-briefcase"></i>Portfolio</a></li>
-        <li><a class="nav-link scrollto active" href="index-2.html#blog"><i class="fas fa-file"></i>Blog</a></li>
+        <li><a class="nav-link scrollto active" href="index-2.html#portfolio"> <i class="fas fa-briefcase"></i>Portfolio</a></li>
+        <li><a class="nav-link scrollto" href="index-2.html#blog"><i class="fas fa-file"></i>Blog</a></li>
         <li><a class="nav-link scrollto" href="index-2.html#contact"><i class="fas fa-envelope"></i>Contact</a></li>
       </ul>
       <i class="fas fa-bars mobile-nav-toggle"></i>
@@ -135,10 +135,10 @@
       <div class="container">
 
         <div class="d-flex justify-content-between align-items-center">
-          <h2>Blog Details</h2>
+          <h2>Portfolio Details</h2>
           <ol>
             <li><a href="index-2.html">Home</a></li>
-            <li><a href="index-2.html#blog">Blog</a></li>
+            <li><a href="index-2.html#portfolio">Portfolio</a></li>
             <li>Portfolio Details</li>
           </ol>
         </div>
@@ -154,13 +154,13 @@
             <div class="portfolio-details-slider swiper">
               <div class="swiper-wrapper align-items-center">
                 <div class="swiper-slide">
-                  <img src="assets/img/blog/01.jpg" alt="">
+                  <img src="assets/img/portfolio/portfolio-details-1.jpg" alt="">
                 </div>
                 <div class="swiper-slide">
-                  <img src="assets/img/blog/02.jpg" alt="">
+                  <img src="assets/img/portfolio/portfolio-details-2.jpg" alt="">
                 </div>
                 <div class="swiper-slide">
-                  <img src="assets/img/blog/03.jpg" alt="">
+                  <img src="assets/img/portfolio/portfolio-details-3.jpg" alt="">
                 </div>
               </div>
               <div class="swiper-pagination"></div>
@@ -168,46 +168,20 @@
           </div>
           <div class="col-lg-4">
             <div class="portfolio-info">
-              <h3>RECENT POSTS</h3>
+              <h3>Project information</h3>
               <ul>
-                <li><strong>Category</strong></li>
-                <li>- Nature Lifestyle</li>
-                 <li>- Awesome Layouts</li>
-                 <li>- Creative Ideas</li> 
-                 <li>- Responsive Templates</li> 
-                 <li>- HTML5 / CSS3 Templates</li> 
-                 <li>- Creative & Unique</li> 
+                <li><strong>Category</strong>: Web design</li>
+                <li><strong>Client</strong>: ASU Company</li>
+                <li><strong>Project date</strong>: 01 March, 2020</li>
+                <li><strong>Project URL</strong>: <a href="#">www.example.com</a></li>
               </ul>
             </div>
             <div class="portfolio-description">
-              <h2>This is an example of Blog detail</h2>
+              <h2>This is an example of portfolio detail</h2>
               <p>
-               Lorem ipsum dolor sit amet consectetur, adipisicing elit. Vel, qui! Eligendi, veritatis, blanditiis quibusdam itaque consectetur assumenda nisi accusamus impedit tempore adipisci quod neque laboriosam nostrum maiores vero harum incidunt.
+               Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta incidunt laudantium dolore totam ad repudiandae recusandae velit numquam, provident sit iusto quidem eius distinctio ex debitis quasi temporibus cum beatae.
               </p>
             </div>
-          </div>
-          <div class="col-lg-12">
-            <form class="email-form">
-              <div class="row">
-                <div class="col-md-6">
-                  <div class="form-group">
-                  <input type="text" name="name" class="form-control" id="name" placeholder="Your Name" required="">
-                  </div>
-                  <div class="form-group">
-                  <input class="form-control" id="contact-email" type="email" name="email" placeholder="Email" required="">
-                  </div>
-                  <div class="form-group">
-                  <input type="text" class="form-control" name="subject" id="subject" placeholder="Subject" required="">
-                  </div>
-                </div>
-                <div class="col-md-6">
-              <div class="form-group">
-                <textarea class="form-control" name="message" rows="6" placeholder="Message" required=""></textarea>
-              </div>
-            </div>
-            <div class="text-center"><button type="submit">Send Message</button></div>
-            </div>
-            </form>
           </div>
         </div>
       </div>
@@ -267,5 +241,5 @@
 </body>
 
 
-<!-- Mirrored from avstechnolabs.com/Themeforest/Gaspar/02/Dark/blog-page.html by HTTrack Website Copier/3.x [XR&CO'2014], Mon, 14 Mar 2022 11:38:28 GMT -->
+<!-- Mirrored from avstechnolabs.com/Themeforest/Gaspar/02/Dark/portfolio-details.html by HTTrack Website Copier/3.x [XR&CO'2014], Mon, 14 Mar 2022 11:38:27 GMT -->
 </html>
