--- a/blog-page.html
+++ b/blog-page.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
   
-<!-- Mirrored from avstechnolabs.com/Themeforest/Gaspar/02/Dark/blog-page.html by HTTrack Website Copier/3.x [XR&CO'2014], Mon, 14 Mar 2022 11:38:28 GMT -->
+<!-- Mirrored from avstechnolabs.com/Themeforest/Gaspar/02/Light/blog-page.html by HTTrack Website Copier/3.x [XR&CO'2014], Mon, 14 Mar 2022 14:05:02 GMT -->
 <head>
     <!-- Title of The Page -->
     <title>Gaspar | Personal Portfolio HTML Template</title>
@@ -111,12 +111,12 @@
     </div>
     <nav id="navbar" class="navbar">
       <ul>
-        <li><a class="nav-link scrollto" href="index-2.html#hero"><i class="fas fa-house-user"></i>Home</a></li>
-        <li><a class="nav-link scrollto" href="index-2.html#about"><i class="fas fa-user-alt"></i>About</a></li>
-        <li><a class="nav-link scrollto" href="index-2.html#services"><i class="fas fa-poll"></i>Services</a></li>
-        <li><a class="nav-link scrollto" href="index-2.html#portfolio"> <i class="fas fa-briefcase"></i>Portfolio</a></li>
-        <li><a class="nav-link scrollto active" href="index-2.html#blog"><i class="fas fa-file"></i>Blog</a></li>
-        <li><a class="nav-link scrollto" href="index-2.html#contact"><i class="fas fa-envelope"></i>Contact</a></li>
+        <li><a class="nav-link scrollto" href="index.html#hero"><i class="fas fa-house-user"></i>Home</a></li>
+        <li><a class="nav-link scrollto" href="index.html#about"><i class="fas fa-user-alt"></i>About</a></li>
+        <li><a class="nav-link scrollto" href="index.html#services"><i class="fas fa-poll"></i>Services</a></li>
+        <li><a class="nav-link scrollto" href="index.html#portfolio"> <i class="fas fa-briefcase"></i>Portfolio</a></li>
+        <li><a class="nav-link scrollto active" href="index.html#blog"><i class="fas fa-file"></i>Blog</a></li>
+        <li><a class="nav-link scrollto" href="index.html#contact"><i class="fas fa-envelope"></i>Contact</a></li>
       </ul>
       <i class="fas fa-bars mobile-nav-toggle"></i>
     </nav><!-- .navbar -->
@@ -137,8 +137,8 @@
         <div class="d-flex justify-content-between align-items-center">
           <h2>Blog Details</h2>
           <ol>
-            <li><a href="index-2.html">Home</a></li>
-            <li><a href="index-2.html#blog">Blog</a></li>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="index.html#blog">Blog</a></li>
             <li>Portfolio Details</li>
           </ol>
         </div>
@@ -258,7 +258,7 @@
   <script src="assets/js/wow.min.js"></script>
    <!-- typed JS-->
   <script src="assets/js/typed.js"></script>
-   <!-- Colors JS -->
+   <!-- colors JS -->
    <script src="assets/js/color.js"></script>
    <!-- Style switch -->
    <script src="assets/js/style.switch.js"></script>
@@ -267,5 +267,5 @@
 </body>
 
 
-<!-- Mirrored from avstechnolabs.com/Themeforest/Gaspar/02/Dark/blog-page.html by HTTrack Website Copier/3.x [XR&CO'2014], Mon, 14 Mar 2022 11:38:28 GMT -->
+<!-- Mirrored from avstechnolabs.com/Themeforest/Gaspar/02/Light/blog-page.html by HTTrack Website Copier/3.x [XR&CO'2014], Mon, 14 Mar 2022 14:05:02 GMT -->
 </html>
