--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 
-<!-- Mirrored from avstechnolabs.com/Themeforest/Gaspar/02/Dark/ by HTTrack Website Copier/3.x [XR&CO'2014], Mon, 14 Mar 2022 11:37:58 GMT -->
+<!-- Mirrored from avstechnolabs.com/Themeforest/Gaspar/02/Light/index.html by HTTrack Website Copier/3.x [XR&CO'2014], Mon, 14 Mar 2022 13:57:23 GMT -->
 <head>
   <!-- Title of The Page -->
   <title>Gaspar | Personal Portfolio HTML Template</title>
@@ -939,7 +939,7 @@
   <script src="assets/js/wow.min.js"></script> 
   <!-- typed JS-->
   <script src="assets/js/typed.js"></script>
-   <!-- Colors JS -->
+   <!-- colors JS -->
    <script src="assets/js/color.js"></script>
    <!-- Style switch -->
    <script src="assets/js/style.switch.js"></script>
@@ -948,5 +948,5 @@
 </body>
 
 
-<!-- Mirrored from avstechnolabs.com/Themeforest/Gaspar/02/Dark/ by HTTrack Website Copier/3.x [XR&CO'2014], Mon, 14 Mar 2022 11:38:18 GMT -->
+<!-- Mirrored from avstechnolabs.com/Themeforest/Gaspar/02/Light/index.html by HTTrack Website Copier/3.x [XR&CO'2014], Mon, 14 Mar 2022 14:04:42 GMT -->
 </html>
