--- a/index.html
+++ b/index.html
@@ -40,14 +40,14 @@
 </head>
 
 <body>
-  <div class="gaspar" data-magic-cursor="show" data-color="crimson">
+  <div class="gaspar" data-magic-cursor="hide" data-color="crimson">
     <!-- Pre Loader -->
     <div id="preloader">
       <div class="loader_line"></div>
     </div>
     <!-- Pre Loader end -->
      <!-- Style switcher start -->
-	<div class="style-switch-wrapper">
+	<!-- <div class="style-switch-wrapper">
 		<div class="style-switch-button">
 			<i class="fa fa-cog" aria-hidden="true"></i>
 		</div>
@@ -80,8 +80,8 @@
         </div>
         <h4 class="title">Magic Cursor</h4>
         <ul class="cursor">
-          <li><a class="showme show" href="#"></a></li>
-          <li><a class="hide" href="#"><svg xmlns="http://www.w3.org/2000/svg" class="svg" id="Capa_1"
+          <li><a class="hide" href="#"></a></li>
+          <li><a class="showme show" href="#"><svg xmlns="http://www.w3.org/2000/svg" class="svg" id="Capa_1"
                 enable-background="new 0 0 512 512" height="512" viewBox="0 0 512 512" width="512"
                 class="svg replaced-svg">
                 <g>
@@ -101,13 +101,13 @@
         </ul>
         <a target="_blank" href="https://themeforest.net/item/gaspar-personal-portfolio-html-template/36192601"
           class="purchse-btn"><i class="fa fa-shopping-cart"></i> Purchase</a>
-	</div>
+	</div> -->
    <!-- Style switcher End -->
     <!-- ======= Header ======= -->
     <header id="header" class="header-transparent">
       <div class="profile">
         <img src="assets/img/me.jpg" class="img-fluid">
-        <h1>Alex Smith</h1>
+        <h1>I. W. A.</h1>
       </div>
       <nav id="navbar" class="navbar">
         <ul>
