--- a/index.html
+++ b/index.html
@@ -134,14 +134,14 @@
         <div class="container">
           <span class="background"></span>
           <div class="row">
-            <div class="col-12 wow bounceInUp" data-wow-duration="3s">
+            <div class="col-md-6 wow bounceInUp" data-wow-duration="3s">
               <div class="hero-img">
                 <img src="assets/img/hero-bg.jpg" alt="">
               </div>
             </div>
-            <div class="col-12 wow bounceInDown" data-wow-duration="3s">
+            <div class="col-md-6 wow bounceInDown" data-wow-duration="3s">
               <div class="hero-box">
-                <h1>Alex Smith</h1>
+                <h1>Indian Web Agency</h1>
                 <h2>I am <span class="typed"></span></h2>
                 <a href="#about" class="btn-scroll scrollto" title="Scroll Down"><i class="fas fa-angle-down"></i></a>
               </div>
