--- a/index.html
+++ b/index.html
@@ -134,15 +134,19 @@
         <div class="container">
           <span class="background"></span>
           <div class="row">
-            <div class="col-md-6 wow bounceInUp" data-wow-duration="3s">
+            <div class="col-12 wow bounceInUp" data-wow-duration="3s">
               <div class="hero-img">
                 <img src="assets/img/hero-bg.jpg" alt="">
               </div>
             </div>
-            <div class="col-md-6 wow bounceInDown" data-wow-duration="3s">
+            <div class="col-12 wow bounceInDown" data-wow-duration="3s">
               <div class="hero-box">
                 <h1>Indian Web Agency</h1>
                 <h2>I am <span class="typed"></span></h2>
+                
+                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi soluta perferendis maiores ullam beatae
+                    inventore!</p>
+                  
                 <a href="#about" class="btn-scroll scrollto" title="Scroll Down"><i class="fas fa-angle-down"></i></a>
               </div>
             </div>
