--- a/index.html
+++ b/index.html
@@ -144,8 +144,8 @@
                 <h1>Indian Web Agency</h1>
                 <h2>I am <span class="typed"></span></h2>
                 
-                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi soluta perferendis maiores ullam beatae
-                    inventore!</p>
+                  <!-- <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi soluta perferendis maiores ullam beatae
+                    inventore!</p> -->
                   
                 <a href="#about" class="btn-scroll scrollto" title="Scroll Down"><i class="fas fa-angle-down"></i></a>
               </div>
