--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <!-- Mirrored from avstechnolabs.com/Themeforest/Gaspar/02/Light/index.html by HTTrack Website Copier/3.x [XR&CO'2014], Mon, 14 Mar 2022 13:57:23 GMT -->
 <head>
   <!-- Title of The Page -->
-  <title>Gaspar | Personal Portfolio HTML Template</title>
+  <title>I. W. A. | Feel the Tech Vibe &#128150;  </title>
   <!-- Meta Informations -->
   <meta charset="utf-8">
   <meta name="description" content="Bootstrap 5 Responsive Gaspar | Personal Portfolio HTML Template">
@@ -142,7 +142,7 @@
             <div class="col-12 wow bounceInDown" data-wow-duration="3s">
               <div class="hero-box">
                 <h1>Indian Web Agency</h1>
-                <h2>I am <span class="typed"></span></h2>
+                <h2>"Stage  <span class="typed"></span>"</h2>
                 
                   <!-- <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi soluta perferendis maiores ullam beatae
                     inventore!</p> -->
