--- a/index.html
+++ b/index.html
@@ -136,13 +136,13 @@
           <div class="row">
             <div class="col-12 wow bounceInUp" data-wow-duration="3s">
               <div class="hero-img">
-                <img src="assets/img/hero-bg.jpg" alt="">
+                <img src="assets/img/hero-bg.gif" alt="">
               </div>
             </div>
             <div class="col-12 wow bounceInDown" data-wow-duration="3s">
               <div class="hero-box">
                 <h1>Indian Web Agency</h1>
-                <h2>"Stage  <span class="typed"></span>"</h2>
+                <h2>"We <span class="typed"></span>"</h2>
                 
                   <!-- <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi soluta perferendis maiores ullam beatae
                     inventore!</p> -->
@@ -158,8 +158,8 @@
       <section id="about" class="about">
         <div class="container wow fadeInLeftBig animated" data-wow-duration="1.5s">
           <div class="section-title wow fadeInDown animated" data-wow-duration="2s">
-            <span>About Me</span>
-            <h2>About Me</h2>
+            <span>About Us</span>
+            <h2>About Us</h2>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
           </div>
           <div class="row">
