--- a/index.html
+++ b/index.html
@@ -132,11 +132,11 @@
       <!-- ======= Hero Section ======= -->
       <section id="hero" class="pt-30">
         <div class="container">
-          <span class="background"></span>
+          <!-- <span class="background"></span> -->
           <div class="row">
             <div class="col-12 wow bounceInUp" data-wow-duration="3s">
               <div class="hero-img">
-                <img src="assets/img/hero-bg.gif" alt="">
+                <img class="hero-im" src="assets/img/hero-bg.gif" alt="">
               </div>
             </div>
             <div class="col-12 wow bounceInDown" data-wow-duration="3s">
