--- a/index.html
+++ b/index.html
@@ -141,6 +141,7 @@
             </div>
             <div class="col-12 wow bounceInDown" data-wow-duration="3s">
               <div class="hero-box">
+                <img class="hero-logo" src="assets/img/logo.svg" alt="">
                 <h1>Indian Web Agency</h1>
                 <h2>"We <span class="typed"></span>"</h2>
                 
