new logo alignment

--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
                 <img class="hero-im" src="assets/img/hero-bg.gif" alt="">
               </div>
             </div>
-            <div class="col-12 wow bounceInDown" data-wow-duration="3s">
+            <div class="col-12 wow bounceInDown hero-boxlo" data-wow-duration="3s">
               <div class="hero-box">
                 <img class="hero-logo" src="assets/img/logo.svg" alt="">
                 <h1>Indian Web Agency</h1>
