--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
     <!-- ======= Header ======= -->
     <header id="header" class="header-transparent">
       <div class="profile">
-        <img src="assets/img/me.jpg" class="img-fluid">
+        <img src="assets/img/me.gif" class="img-fluid">
         <h1>I. W. A.</h1>
       </div>
       <nav id="navbar" class="navbar">
