--- a/index.html
+++ b/index.html
@@ -107,7 +107,10 @@
     <header id="header" class="header-transparent">
       <div class="profile">
         <img src="assets/img/me.gif" class="img-fluid">
-        <h1>I. W. A.</h1>
+        <div class="logo"><img src="assets/img/logo.svg" >
+
+          <h1>I. W. A.</h1></div>
+        
       </div>
       <nav id="navbar" class="navbar">
         <ul>
