--- a/index.html
+++ b/index.html
@@ -162,10 +162,9 @@
       <section id="about" class="about">
         <div class="container wow fadeInLeftBig animated" data-wow-duration="1.5s">
           <div class="section-title wow fadeInDown animated" data-wow-duration="2s">
-            <span>About Us</span>
-            <h2>About Us</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-          </div>
+            <span>Why Choose Us</span>
+            <h2>Why Choose Us</h2>
+            <p>We deliver memorable websites. </p></div>
           <div class="row">
             <div
               class="col-xl-4 col-md-12 d-flex align-items-stretch justify-content-center justify-content-lg-start wow rollIn"
@@ -180,25 +179,22 @@
                 <div class="row wow fadeInLeft animated" data-wow-duration="2s">
                   <div class="col-sm-6">
                     <ul>
-                      <li><i class="fas fa-arrow-right"></i></i><strong>Name:</strong> <span>Aliza Smith</span>
+                      <li><i class="fas fa-arrow-right"></i></i><strong>We're specialized.</strong> <span></span>
+                      </li><li><strong></strong>  <span>We're not generalists, we only offer you what we do best: Branded assets, UI/UX design, full-stack development, and conversion optimization.</span>
                       </li>
-                      <li><i class="fas fa-arrow-right"></i></i><strong>Website:</strong>
-                       <a href="#"><span>www.example.com</span></a>
+                      <li><i class="fas fa-arrow-right"></i></i><strong>We focus on results.</strong>
                       </li>
-                      <li><i class="fas fa-arrow-right"></i></i><strong>Phone:</strong> <a href="tel:(+01)123-456-789"><span>(+01)123-456-789</span></a>
-                      </li>
-                      <li><i class="fas fa-arrow-right"></i></i><strong>City:</strong> <span>New York, USA</span>
+                      <li><strong></strong>  <span>We care about the impact our work has on your business or organization—not how it looks in our portfolio or in an award showcase.</span>
                       </li>
                     </ul>
                   </div>
                   <div class="col-sm-6">
                     <ul>
-                      <li><i class="fas fa-arrow-right"></i></i><strong>Age:</strong> <span>30</span></li>
-                      <li><i class="fas fa-arrow-right"></i></i><strong>Degree:</strong> <span>Master</span></li>
-                      <li><i class="fas fa-arrow-right"></i></i><strong>Email:</strong>
-                       <a href="mailto:info@example.com"><span>info@example.com</span></a>
+                      <li><i class="fas fa-arrow-right"></i></i><strong>We're responsive.</strong></li>
+                      <li><strong></strong>  <span>We limit the number of clients we take on each year to ensure each one has an outstanding customer experience. Expect responses in hours—not days.</span></li>
+                      <li><i class="fas fa-arrow-right"></i></i><strong>We go the extra mile.</strong>
                       </li>
-                      <li><i class="fas fa-arrow-right"></i></i><strong>Freelance:</strong> <span>Available</span>
+                      <li><strong></strong>  <span>We view our engagements as relationships—not vendor agreements. In addition to what we produce, we also educate our customers on digital best practices along the way.</span>
                       </li>
                     </ul>
                   </div>
