--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
                   <div class="col-md-6 d-md-flex align-items-md-stretch">
                     <div class="count-box">
                       <i class="fas fa-smile" style="color: #20b38e;"></i>
-                      <span data-purecounter-start="0" data-purecounter-end="232" data-purecounter-duration="1"
+                      <span data-purecounter-start="0" data-purecounter-end="25" data-purecounter-duration="1"
                         class="purecounter"></span>
                       <p><strong>Happy Clients</strong> Lorem ipsum dolor sit amet consectetur adipisicing elit.
                       </p>
@@ -213,7 +213,7 @@
                   <div class="col-md-6 d-md-flex align-items-md-stretch">
                     <div class="count-box">
                       <i class="fas fa-folder-open" style="color:#8a1ac2;"></i>
-                      <span data-purecounter-start="0" data-purecounter-end="521" data-purecounter-duration="1"
+                      <span data-purecounter-start="0" data-purecounter-end="52" data-purecounter-duration="1"
                         class="purecounter"></span>
                       <p><strong>Projects</strong> Lorem ipsum dolor sit amet consectetur adipisicing elit.
                         tan
@@ -226,7 +226,7 @@
                       <i class="fas fa-clock" style="color: #2cbdee;"></i>
                       <span data-purecounter-start="0" data-purecounter-end="18" data-purecounter-duration="1"
                         class="purecounter"></span>
-                      <p><strong>Years of experience</strong> Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                      <p><strong>Months of Dedication</strong> Lorem ipsum dolor sit amet consectetur adipisicing elit.
                       </p>
                     </div>
                   </div>
@@ -234,7 +234,7 @@
                   <div class="col-md-6 d-md-flex align-items-md-stretch">
                     <div class="count-box">
                       <i class="fas fa-award" style="color: #ffb459;"></i>
-                      <span data-purecounter-start="0" data-purecounter-end="16" data-purecounter-duration="1"
+                      <span data-purecounter-start="0" data-purecounter-end="3" data-purecounter-duration="1"
                         class="purecounter"></span>
                       <p><strong>Awards</strong> Lorem ipsum dolor sit amet consectetur adipisicing elit.
                       </p>
