--- a/index.html
+++ b/index.html
@@ -553,14 +553,12 @@
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
           </div>
           <ul id="portfolio-flters" class="d-flex justify-content-center wow flipInX animated" data-wow-duration="2s">
-<DIV class="row">
-  <div class="col">
+<DIV >
     <li data-filter="*" class="filter-active">All</li>
   <li data-filter=".filter-web">Digital Marketing & Branding</li>
   <li data-filter=".filter-ux">UX Design</li>
   <li data-filter=".filter-card">Web Development</li>
 
-</div>
 
 
 </DIV>
