--- a/index.html
+++ b/index.html
@@ -867,7 +867,7 @@
         </div>
       </section><!-- End Pricing Section -->
       <!-- ======= My Blog Section ======= -->
-      <section id="blog" class="blog">
+      <!-- <section id="blog" class="blog">
         <div class="container">
           <div class="section-title wow fadeInDown animated" data-wow-duration="2s">
             <span>Blog</span>
@@ -945,7 +945,7 @@
             </div>
           </div>
         </div>
-      </section>
+      </section> -->
       <!-- End My Blog Section -->
 
       <!-- ======= Contact Me Section ======= -->
